languages/CNNTrainLang/src/test/resources/valid_tests/FlowNetEPEConfig.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration FlowNetEPEConfig{
     num_epoch:1
     batch_size:16
     normalize:false
     context:gpu
     load_checkpoint:false
	 loss:epe
     optimizer:adam{
         learning_rate:0.0002
		 weight_decay:0.0004
         epsilon:0.00000001
     }
}
