languages/CNNTrainLang/src/test/resources/invalid_parser_tests/MissingColon.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration SimpleConfig1{
     num_epoch  5
     batch_size : 100
     optimizer : adam{
         learning_rate : 0.001
     }
 }
